添加错误处理机制

--- a/josephus_fixed.ipynb
+++ b/josephus_fixed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,8 +18,10 @@
     "import zipfile\n",
     "\n",
     "class Person:\n",
-    "    def __init__(self, name = '', age = -1):\n",
+    "    def __init__(self, name = '', age = 0):\n",
     "        self.name = name\n",
+    "        if age < 0:\n",
+    "            raise ValueError('The value of age can be less than 0')\n",
     "        self.age = age\n",
     "\n",
     "class Reader:\n",
@@ -55,12 +57,13 @@
     "        return self\n",
     "\n",
     "    def __next__(self):\n",
-    "        item = self.it.__next__()\n",
-    "        if not item:\n",
+    "        try:\n",
+    "            item = self.it.__next__()\n",
+    "        except StopIteration:\n",
     "            self.csv_file.close()\n",
     "            raise StopIteration\n",
     "        name = item[0]\n",
-    "        age = item[1]\n",
+    "        age = int(item[1])\n",
     "        return Person(name, age)\n",
     "\n",
     "class TxtInZipReader(TxtReader):\n",
@@ -90,6 +93,8 @@
     "\n",
     "    # 删功能\n",
     "    def pop(self, index):\n",
+    "        if index >= len(self.people):\n",
+    "            raise IndexError\n",
     "        self.people.pop(index)\n",
     "    \n",
     "    # 查功能\n",
@@ -123,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
